--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
-crewai==0.28.8
-openai==1.13.3
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-matplotlib==3.7.2
-seaborn==0.12.2
-scipy==1.11.1
-joblib==1.3.2
-python-dotenv==1.0.0
+crewai
+crewai-tools
+langchain
+langchain-openai
+langchain-core
+langchain-community
+openai
+tiktoken
+pandas
+numpy
+matplotlib
+seaborn
+scikit-learn
+plotly
+joblib
+python-dotenv
+
 
